# CloudWorx-Desktop-Client

./: .gitignore  CMakeLists.txt  Images.qrc  README.md  VirtualFile.h  accountsettingspage.cpp  accountsettingspage.h  accountsettingspage.ui  argon2id_utils.cpp  argon2id_utils.h  dashboard.cpp  dashboard.h  dashboard.ui  decryptSharedFilePage.ui  decryptfilepage.cpp  decryptfilepage.h  decryptfilepage.ui  decryptsharedpage.cpp  decryptsharedpage.h  decryptsharedpage.ui  envelopeencryption.cpp  envelopeencryption.h  envelopeencryptionmanager.cpp  envelopeencryptionmanager.h  filepasswordpage.cpp  filepasswordpage.h  filepasswordpage.ui  fileuploadpage.cpp  fileuploadpage.h  fileuploadpage.ui  keygenpage.cpp  keygenpage.h  keygenpage.ui  loginpage.cpp  loginpage.h  loginpage.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  (+6 more)
cryptography/: hybridencryptionmanager.cpp  hybridencryptionmanager.h
models/: UserLoginModel.h  UserRegisterModel.h  filelistmodel.h  filemodel.h
network/: authapi.cpp  authapi.h  filesapi.cpp  filesapi.h  sharesapi.cpp  sharesapi.h
polymorphism/: ImageMessage.h  Message.h  Messenger.h  TextMessage.h  polyMain.cpp
templates/: employeeRecord.h  manageRecord.cpp
utils/: ApiHelper.h  keygenutils.cpp  keygenutils.h
